--- a/styles.css
+++ b/styles.css
@@ -8,6 +8,7 @@ body {
 background-color: var(--primary-color);
 font-size: 15px;    
 font-family: "lato", sans-serif;
+padding-top: 50px;
 }
 
 #container {
